lattice-monitor/testbed/nginx_ingress_controller/test/alb-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: micro-ingress-alb
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip 
spec:
  rules:
  - host: alb.hostname.mydomain.com
    http:
      paths:
      - backend:
          service:
            name: hostname-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: alb.apache.mydomain.com
    http:
      paths:
      - backend:
            service:
              name: apache-svc
              port:
                number: 80
        path: /
        pathType: Prefix
