lattice-monitor/testbed/nginx_ingress_controller/test/micro-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: micro-ingress
  # namespace: default
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
    - host: host
      http:
        paths:
        - backend:
            service:
              name: grafana
              port:
                number: 3000
          path: /
          pathType: Prefix
    # - host: apache.mydomain.com
    #   http:
    #     paths:
    #     - backend:
    #         service:
    #           name: apache-svc
    #           port:
    #             number: 80
    #       path: /
    #       pathType: Prefix
